# duckduckgo-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FINAL_SUMMARY.md  Makefile  PRODUCTION_READY.md  PROJECT_STRUCTURE.md  README.md  SUMMARY.md  ddgs  init-git.sh  install.bat  install.sh  pyproject.toml  requirements.txt  results.json  setup.sh
.github/workflows/: ci.yml
duckduckgo_cli/: __init__.py  config.py  display.py  export.py  filter.py  main.py  search.py  utils.py
src/: __init__.py  bookmarks.py  config.py  display.py  history.py
tests/: test_ddgs.py
