[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "duckduckgo-cli"
version = "1.2.0"
authors = [
  { name="GrecAndrei", email="your-email@example.com" },
]
description = "A feature-rich command-line interface for DuckDuckGo search."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ddgs>=9.5.5",
    "requests>=2.32.5",
    "rich>=13.0.0",
]

[project.urls]
"Homepage" = "https://github.com/GrecAndrei/duckduckgo-cli"
"Bug Tracker" = "https://github.com/GrecAndrei/duckduckgo-cli/issues"

[project.scripts]
ddg-cli = "duckduckgo_cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["duckduckgo_cli*"]